--- a/filter.html
+++ b/filter.html
@@ -8,15 +8,15 @@
     <meta property="og:description" content="Filtro Carnaval Presidente 2015">
     <meta name="keywords" content="aguacate, aguacatekun, santo, domingo, republica, dominicana">
     <meta name="description" content="Filtro Carnaval Presidente 2015">
-    <meta property="og:image" content="http://miguelrivas.me/img/portfolio.png">
+    <meta property="og:image" content="https://miguel-rivas.github.io/img/portfolio.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <link rel="icon" type="image/png" href="http://miguelrivas.me/img/logo.png">
-    <link rel="apple-touch-icon-precomposed" href="http://miguelrivas.me/img/logo.png">
-    <link rel="apple-touch-icon" href="http://miguelrivas.me/img/logo.png">
+    <link rel="icon" type="image/png" href="https://miguel-rivas.github.io/img/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="https://miguel-rivas.github.io/img/favicon.ico">
+    <link rel="apple-touch-icon" href="https://miguel-rivas.github.io/img/favicon.ico">
     <meta name="msapplication-TileColor" content="#222">
-    <meta name="msapplication-TileImage" content="http://miguelrivas.me/img/logo.png">
+    <meta name="msapplication-TileImage" content="https://miguel-rivas.github.io/img/favicon.ico">
     <link rel="stylesheet" href="css/filter_style.css">
   </head>
   <body>
