removing unused files/imports

--- a/home.html
+++ b/home.html
@@ -2,21 +2,12 @@
 <html>
   <head>
     <title>Carnaval Presidente 2015</title>
-    <meta charset="utf-8">
-    <meta property="og:title" content="Carnaval Presidente 2015">
-    <meta property="og:site_name" content="Miguel Rivas">
-    <meta property="og:description" content="Landing Page Carnaval Presidente 2015">
-    <meta name="keywords" content="aguacate, aguacatekun, santo, domingo, republica, dominicana">
-    <meta name="description" content="Landing Page Carnaval Presidente 2015">
-    <meta property="og:image" content="https://miguel-rivas.github.io/img/portfolio.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <link rel="icon" type="image/png" href="https://miguel-rivas.github.io/img/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" href="https://miguel-rivas.github.io/img/favicon.ico">
-    <link rel="apple-touch-icon" href="https://miguel-rivas.github.io/img/favicon.ico">
+    <meta charset="utf-8">   
+    <link rel="icon" type="image/png" href="https://miguel-rivas.github.io/img/favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="https://miguel-rivas.github.io/img/favicon.png">
+    <link rel="apple-touch-icon" href="https://miguel-rivas.github.io/img/favicon.png">
     <meta name="msapplication-TileColor" content="#222">
-    <meta name="msapplication-TileImage" content="https://miguel-rivas.github.io/img/favicon.ico">
+    <meta name="msapplication-TileImage" content="https://miguel-rivas.github.io/img/favicon.png">
     <link rel="stylesheet" href="css/home_style.css">
   </head>
   <body>
@@ -59,7 +50,7 @@
                 <div id="stodgo" class="sub_box4 leftbox">
                   <div class="bomba">
                     <h3>Santo Domingo</h3>
-                    <div class="btn2">CON&Oacute;CE M&Aacute;S</div><img src="https://miguel-rivas.github.io/zapp/img/favicon.ico" class="icon">
+                    <div class="btn2">CON&Oacute;CE M&Aacute;S</div><img src="https://miguel-rivas.github.io/zapp/img/favicon.png" class="icon">
                   </div>
                   <div class="color_cover"></div>
                   <div class="slide_show">
@@ -74,7 +65,7 @@
                 <div id="santiago" class="sub_box4 leftbox">
                   <div class="bomba">
                     <h3>Santiago</h3>
-                    <div class="btn2">CON&Oacute;CE M&Aacute;S</div><img src="https://miguel-rivas.github.io/zapp/img/favicon.ico" class="icon">
+                    <div class="btn2">CON&Oacute;CE M&Aacute;S</div><img src="https://miguel-rivas.github.io/zapp/img/favicon.png" class="icon">
                   </div>
                   <div class="color_cover"></div>
                   <div class="slide_show">
@@ -88,7 +79,7 @@
                 <div id="vega" class="sub_box4 rightbox">
                   <div class="bomba">
                     <h3>La Vega</h3>
-                    <div class="btn2">CON&Oacute;CE M&Aacute;S</div><img src="https://miguel-rivas.github.io/zapp/img/favicon.ico" class="icon">
+                    <div class="btn2">CON&Oacute;CE M&Aacute;S</div><img src="https://miguel-rivas.github.io/zapp/img/favicon.png" class="icon">
                   </div>
                   <div class="color_cover"></div>
                   <div class="slide_show">
@@ -103,7 +94,7 @@
                 <div id="bonao" class="sub_box4 rightbox">
                   <div class="bomba">
                     <h3>Bonao</h3>
-                    <div class="btn2">CON&Oacute;CE M&Aacute;S</div><img src="https://miguel-rivas.github.io/zapp/img/favicon.ico" class="icon">
+                    <div class="btn2">CON&Oacute;CE M&Aacute;S</div><img src="https://miguel-rivas.github.io/zapp/img/favicon.png" class="icon">
                   </div>
                   <div class="color_cover"></div>
                   <div class="slide_show">
