--- a/filter.html
+++ b/filter.html
@@ -31,7 +31,7 @@
       </div>
       <footer id="footer">© 2015 - EL CONSUMO DE ALCOHOL PERJUDICA LA SALUD</footer>
     </div>
-    <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/filter_script.js" type="text/javascript"></script>
   </body>
 </html>
