--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
         </div>
       </footer>
     </div>
-    <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/jquery.colorbox.js" type="text/javascript"></script>
     <script src="js/all.js" type="text/javascript"></script>
     <script src="js/home_script.js" type="text/javascript"></script>
